--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -7,6 +7,10 @@ body {
     padding-left: 15px;
 } */
 
+.comment {
+    margin: 20px 0px 20px 20px;
+}
+
 .page-header {
     background-color: #ff9400;
     margin-top: 0;
